# pinocchio-rs

./: Cargo.toml  S  build.rs
.github/workflows/: build.yml
.zed/: settings.json
cpp/: compile_commands.json  xmake.lua
cpp/lib/rust/: cxx.h
cpp/src/: pcxx.h  pinocchio_bridge.cpp  pinocchio_bridge.h  pinocchio_bridge_utils.h
demo/: Cargo.toml
demo/model/: double_pendulum.urdf
demo/src/: main.rs
src/: lib.rs  model.rs
