[package]
name = "pinocchio_bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
nalgebra = { version = "0.34" }
cxx = "1.0.128"
serde_json = "1.0.149"
serde = "1.0.228"

[build-dependencies]
cxx-build = "=1.0.128"
serde = "1.0.228"
serde_json = "1.0.149"

[lib]
name = "pinocchio_bridge"
path = "src/lib.rs"

[[bin]]
name = "dev"
path = "bin/dev.rs"
