[package]
name = "pinocchio_rs"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
nalgebra = { version = "0.34" }
cxx = "1.0.128"
serde_json = "1.0.149"
serde = "1.0.228"

[build-dependencies]
cxx-build = "=1.0.128"
serde = "1.0.228"
serde_json = "1.0.149"
ureq = "3.2.1"

[lib]
name = "pinocchio_rs"
path = "src/lib.rs"

[[bin]]
name = "dev"
path = "bin/dev.rs"

[features]
# Build library from source
source_build = []
